style: fix spacing between tags.
Former-commit-id: e92b823d0d1c53ce4f74048c3fcdca6193de08c6

--- a/themes/langurmonkey/static/css/main.css
+++ b/themes/langurmonkey/static/css/main.css
@@ -1373,6 +1373,7 @@ article.post > footer a {
   line-height: 1;
   margin: 0;
   padding: 0;
+  margin-left: 0.2em;
 }
 
 .post > footer .stats li:first-child {
